# shipslist

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml  test.json
ships_list/additional_functions/: additional_functions.py  booking_functions.py  bunker_consumption.py  classes.py  freight_calculator.py  import_tasks.py  input_functions.py  optimal_speed.py  ships_functions.py  tasks_functions.py  voyage_functions.py
ships_list/additional_functions/booking/: additiona_functions.py  additional_functions.py  booking_functions.py
ships_list/additional_functions/bunker/: additional_bunker_functions.py  bunker_consumption.py  distances_input.py  duration.py  point_consumption.py  points_function.py  testing.py
ships_list/cli/: cli.py
ships_list/files/: Comeback.txt  dima.txt  exp.txt  experimental.txt  filled_pda.txt  jo  new_template.txt  ok  pda_request.txt  pda_request_template.txt  pda_template.txt  test_Dima.txt  test_template.txt
ships_list/lists/: BDI_etalon.json  bookings.json  bunkers_calculations.json  data_of_template.json  data_of_templates.json  filled_templates.json  indexes.json  list_of_lists.json  list_of_voyages.json  parties.json  people.json  positions.json  ships.json  stages.json  standard_list.json  standard_list.txt  supporting_info.json  tasks.json  tasks_to_add.txt
ships_list/scripts/: ships_list.py
ships_list/ships_list/: ships_list.py
ships_list/templates/: template_manager.py
tests/: file.py  help_text.txt  test_booking.py  test_freight_calculator.py  test_ship.py  test_ships_list.py  test_task.py  test_templates.py  universal_test.py
tests/fixtures/: expected_output_new_ship.json  expected_output_new_ship.py  expected_output_new_ship.txt  help_text.txt
tests/tests/: test_ships_list.py
(+52 files in other folders)
