[tool.poetry]
name = "ships-list"
version = "0.1.0"
description = "program to work with list of tasks"
authors = ["Vitaliy Malyshev <vitatomchyk@gmail.com>"]
packages = [
  { include = "ships_list" },
]

[tool.poetry.scripts]
ships_list = "ships_list.scripts.ships_list:main"

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "4.0.1"
pytest = "7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
