[tool.poetry]
name = "ships-list"
version = "0.1.0"
description = "program to work with list of tasks"
authors = ["Vitaliy Malyshev <vitatomchyk@gmail.com>"]
packages = [
  { include = "ships_list" },
]

[tool.poetry.scripts]
ships_list = "ships_list.scripts.ships_list:main"

[tool.poetry.dependencies]
python = "^3.8.7"
flake8 = "^5.0.3"
pytest = "^7.1.2"
autopep8 = "^1.6.0"
tk-tools = "^0.16.0"
Tcl = "^0.2"
tk = "^0.1.0"
coverage = "^6.4.2"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
